half way mobile styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Cabin:wght@700&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+    rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
@@ -14,36 +18,42 @@
 <body>
 
   <header>
-    <!-- <nav class="nav-desktop">
+    <nav class="nav-desktop off">
       <a href="#" id="about">About</a>
       <a href="#" id="services">Services</a>
       <a href="#" id="projects">Projects</a>
       <a href="#" id="contact">Contact</a>
-    </nav> -->
+    </nav>
+    <button class="nav-mobile-button">
+      <img src="./images/icon-hamburger.svg" alt="">
+    </button>
+    <nav class="nav-mobile off">
+    </nav>
+    <p>sunnyside</p>
     <h1>We are creatives</h1>
-    <img src="./images/icon-arrow-down.svg" alt="">
+    <a href="#" class="header-arrow-down bounce"><img src="./images/icon-arrow-down.svg" alt=""></a>
   </header>
 
   <main>
     <section class="first">
-      <div class="first-text">
+      <div class="first-text first-text-one">
         <h2>Transform your brand</h2>
         <p>We are a full-service creative agency specializing in helping brands grow fast.
           Engage your clients through compelling visuals that do most of the marketing for you.</p>
         <a href="#">Learn more</a>
       </div>
 
-      <div class="first-img-one"></div>
+      <div class="first-img first-img-one"></div>
 
 
-      <div class="first-text">
+      <div class="first-text first-text-two hover-red">
         <h2>Stand out to the right audience</h2>
 
         <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll
           build and extend your brand in digital places.</p>
         <a href="#">Learn more</a>
       </div>
-      <div class="first-img-two"></div>
+      <div class="first-img first-img-two"></div>
 
       <div class="first-img-inner-text cherry-img">
         <h2>Graphic design</h2>
@@ -57,41 +67,43 @@
         </p>
       </div>
     </section>
+    <section class="clients">
+      <h3>Client testimonials</h3>
+      <div class="client client-one">
+        <div class="client-pic client-pic-one"></div>
+        <p class="clients-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and
+          deadlines were always hit.</p>
+        <p class="clients-sign">Emily R.</p>
+        <p class="clients-function">Marketing Director</p>
+      </div>
+
+      <div class="client client-two">
+        <div class="client-pic client-pic-two"></div>
+        <p class="clients-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a
+          satisfying and enjoyable
+          experience.</p>
+        <p class="clients-sign">Thomas S.</p>
+        <p class="clients-function">Chief Operating Officer</p>
+      </div>
+
+      <div class="client client-three">
+        <div class="client-pic client-pic-three"></div>
+        <p class="clients-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside.
+          Highly
+          recommended!</p>
+        <p class="clients-sign">Jennie F.</p>
+        <p class="clients-function">Business Owner</p>
+      </div>
+    </section>
+    <section class="second">
+      <div class="second second-one"></div>
+      <div class="second second-two"></div>
+      <div class="second second-three"></div>
+      <div class="second second-four"></div>
+    </section>
   </main>
 
-  <section class="clients">
-    <h3>Client testimonials</h3>
-    <div class="client client-one">
-      <div class="client-pic client-pic-one"></div>
-      <p class="clients-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and
-        deadlines were always hit.</p>
-      <p class="clients-sign">Emily R.</p>
-      <p class="clients-function">Marketing Director</p>
-    </div>
 
-    <div class="client client-two">
-      <div class="client-pic client-pic-two"></div>
-      <p class="clients-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a
-        satisfying and enjoyable
-        experience.</p>
-      <p class="clients-sign">Thomas S.</p>
-      <p class="clients-function">Chief Operating Officer</p>
-    </div>
-
-    <div class="client client-three">
-      <div class="client-pic client-pic-three"></div>
-      <p class="clients-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
-        recommended!</p>
-      <p class="clients-sign">Jennie F.</p>
-      <p class="clients-function">Business Owner</p>
-    </div>
-  </section>
-  <section class="second">
-    <div class="second second-one"></div>
-    <div class="second second-two"></div>
-    <div class="second second-three"></div>
-    <div class="second second-four"></div>
-  </section>
   <footer>
     <p class="footer-header">sunnyside</p>
     <div class="footer-links">
