--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Cabin:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700;900&family=Cabin:wght@600;700&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
@@ -96,16 +96,16 @@
     </section>
 
     <section class="second">
-      <div class="second second-one"></div>
-      <div class="second second-two"></div>
-      <div class="second second-three"></div>
-      <div class="second second-four"></div>
+      <div class="second-img second-one"></div>
+      <div class="second-img second-two"></div>
+      <div class="second-img second-three"></div>
+      <div class="second-img second-four"></div>
     </section>
   </main>
 
 
   <footer>
-    <p class="footer-header">sunnyside</p>
+    <b><p class="footer-header">sunnyside</p></b>
     <div class="footer-links">
       <a href="#">About</a>
       <a href="#">Services</a>
