mobile version done

--- a/index.html
+++ b/index.html
@@ -26,16 +26,22 @@
       <img src="./images/icon-hamburger.svg" alt="">
     </button>
     <nav class="nav-mobile off">
+      <div>
+        <a href="#" class="navbar-link navbar-link-mobile">About</a>
+      <a href="#" class="navbar-link navbar-link-mobile">Services</a>
+      <a href="#" class="navbar-link navbar-link-mobile">Projects</a>
+      <a href="#contact-us" class="navbar-link navbar-link-mobile">Contact</a>
+      </div>
     </nav>
     <p>sunnyside</p>
     <h1>We are creatives</h1>
-    <a href="#" class="header-arrow-down bounce"><img src="./images/icon-arrow-down.svg" alt=""></a>
+    <a href="#arrow-to" class="header-arrow-down bounce"><img src="./images/icon-arrow-down.svg" alt=""></a>
   </header>
 
   <main>
     <section class="first">
       <div class="first-text first-text-one">
-        <h2>Transform your brand</h2>
+        <h2 id="arrow-to">Transform your brand</h2>
         <p>We are a full-service creative agency specializing in helping brands grow fast.
           Engage your clients through compelling visuals that do most of the marketing for you.</p>
         <a href="#">Learn more</a>
@@ -105,7 +111,7 @@
 
 
   <footer>
-    <b><p class="footer-header">sunnyside</p></b>
+   <p id="contact-us" class="footer-header">sunnyside</p>
     <div class="footer-links">
       <a href="#">About</a>
       <a href="#">Services</a>
