min 768px screen width styling. Smooth disappearing of mobile navbar.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700;900&family=Cabin:wght@600;700&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700;900&family=Cabin:wght@600;700&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+    rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
@@ -16,11 +18,11 @@
 <body>
 
   <header>
-    <nav class="nav-desktop off">
-      <a href="#" id="about">About</a>
-      <a href="#" id="services">Services</a>
-      <a href="#" id="projects">Projects</a>
-      <a href="#" id="contact">Contact</a>
+    <nav class="nav-desktop">
+      <a href="#" id="about" class="navbar-link">About</a>
+      <a href="#" id="services" class="navbar-link">Services</a>
+      <a href="#" id="projects" class="navbar-link">Projects</a>
+      <a href="#" id="contact" class="navbar-link">Contact</a>
     </nav>
     <button class="nav-mobile-button">
       <img src="./images/icon-hamburger.svg" alt="">
@@ -28,9 +30,9 @@
     <nav class="nav-mobile off">
       <div>
         <a href="#" class="navbar-link navbar-link-mobile">About</a>
-      <a href="#" class="navbar-link navbar-link-mobile">Services</a>
-      <a href="#" class="navbar-link navbar-link-mobile">Projects</a>
-      <a href="#contact-us" class="navbar-link navbar-link-mobile">Contact</a>
+        <a href="#" class="navbar-link navbar-link-mobile">Services</a>
+        <a href="#" class="navbar-link navbar-link-mobile">Projects</a>
+        <a href="#contact-us" class="navbar-link navbar-link-mobile">Contact</a>
       </div>
     </nav>
     <p>sunnyside</p>
@@ -71,7 +73,7 @@
         </p>
       </div>
     </section>
-    
+
     <section class="clients">
       <h3>Client testimonials</h3>
       <div class="client client-one">
@@ -111,7 +113,7 @@
 
 
   <footer>
-   <p id="contact-us" class="footer-header">sunnyside</p>
+    <p id="contact-us" class="footer-header">sunnyside</p>
     <div class="footer-links">
       <a href="#">About</a>
       <a href="#">Services</a>
