add media styling for screen width: - 768px - 992px - 1200px

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#" id="about" class="navbar-link">About</a>
       <a href="#" id="services" class="navbar-link">Services</a>
       <a href="#" id="projects" class="navbar-link">Projects</a>
-      <a href="#" id="contact" class="navbar-link">Contact</a>
+      <a href="#contact-us" id="contact" class="navbar-link">Contact</a>
     </nav>
     <button class="nav-mobile-button">
       <img src="./images/icon-hamburger.svg" alt="">
@@ -41,6 +41,7 @@
   </header>
 
   <main>
+   <div class="wrapper">
     <section class="first">
       <div class="first-text first-text-one">
         <h2 id="arrow-to">Transform your brand</h2>
@@ -109,6 +110,7 @@
       <div class="second-img second-three"></div>
       <div class="second-img second-four"></div>
     </section>
+   </div>
   </main>
 
 
